--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-project",
-  "homepage": "https://dts-official.github.io/dts/",
+  "homepage": "https://GaddoStaffu.github.io/dts-frontend/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
